--- a/dashboard.html
+++ b/dashboard.html
@@ -176,6 +176,31 @@
     }
     .card .value { font-size: 28px; font-weight: 700; color: white; letter-spacing: -0.02em; }
 
+    /* Accordions / stacks */
+    .stacked { display: flex; flex-direction: column; gap: 16px; }
+    details.accordion {
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: 12px;
+      padding: 0;
+      overflow: hidden;
+    }
+    details.accordion[open] { border-color: rgba(255,255,255,0.14); }
+    details.accordion summary {
+      list-style: none;
+      cursor: pointer;
+      padding: 14px 16px;
+      margin: 0;
+      font-weight: 700;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 10px;
+    }
+    details.accordion summary::-webkit-details-marker { display: none; }
+    .accordion-body { padding: 16px; border-top: 1px solid var(--border); }
+
     /* Grid Layouts */
     .grid { display: grid; gap: 20px; grid-template-columns: repeat(auto-fit, minmax(380px, 1fr)); margin-bottom: 28px; }
     
@@ -576,84 +601,98 @@
     <section class="tab" id="tab-sections">
       <h3 class="section-title" style="margin-top:0;">Manage Sections / Classes</h3>
       <div id="section-error" class="error"></div>
-      <div class="grid">
-        <div class="card">
-          <h3>Create / Update Section</h3>
-          <form id="section-form" style="grid-template-columns: repeat(auto-fit, minmax(180px,1fr));">
-            <input id="section-name" placeholder="Section name (e.g., Grade 7 - A)" required />
-            <select id="section-band">
-              <option value="">Band (optional)</option>
-              <option value="JHS">JHS</option>
-              <option value="SHS">SHS</option>
-            </select>
-            <input id="section-grade" placeholder="Grade level (e.g., 7)" />
-            <input id="section-track" placeholder="Track/Strand (optional)" />
-            <select id="section-adviser">
-              <option value="">Adviser (optional)</option>
-            </select>
-            <button type="submit">Save Section</button>
-          </form>
-          <p style="font-size:12px; color: var(--muted); margin-top:8px;">Admins only: create/edit/delete sections and assign students.</p>
-        </div>
-        <div class="card">
-          <h3>Assign Students to Section</h3>
-          <div style="display:flex; flex-wrap:wrap; gap:12px; margin-bottom:12px;">
-            <select id="assign-section" style="min-width:200px;"></select>
-            <select id="assign-student" style="min-width:200px;"></select>
-            <button id="assign-btn" type="button">Assign</button>
+      <div class="stacked">
+        <details class="accordion" open>
+          <summary>Create / Update Section</summary>
+          <div class="accordion-body">
+            <form id="section-form" style="grid-template-columns: repeat(auto-fit, minmax(180px,1fr));">
+              <input id="section-name" placeholder="Section name (e.g., Grade 7 - A)" required />
+              <select id="section-band">
+                <option value="">Band (optional)</option>
+                <option value="JHS">JHS</option>
+                <option value="SHS">SHS</option>
+              </select>
+              <input id="section-grade" placeholder="Grade level (e.g., 7)" />
+              <input id="section-track" placeholder="Track/Strand (optional)" />
+              <select id="section-adviser">
+                <option value="">Adviser (optional)</option>
+              </select>
+              <button type="submit">Save Section</button>
+            </form>
+            <p style="font-size:12px; color: var(--muted); margin-top:8px;">Admins only: create/edit/delete sections and assign students.</p>
           </div>
-          <div id="section-roster" class="table-container" style="max-height:260px;">
-            <table>
-              <thead><tr><th>Student</th><th>Grade</th></tr></thead>
-              <tbody id="section-roster-body"></tbody>
-            </table>
+        </details>
+
+        <details class="accordion" open>
+          <summary>Assign Students to Section</summary>
+          <div class="accordion-body">
+            <div style="display:flex; flex-wrap:wrap; gap:12px; margin-bottom:12px;">
+              <select id="assign-section" style="min-width:200px;"></select>
+              <select id="assign-student" style="min-width:200px;"></select>
+              <button id="assign-btn" type="button">Assign</button>
+            </div>
+            <div id="section-roster" class="table-container" style="max-height:260px;">
+              <table>
+                <thead><tr><th>Student</th><th>Grade</th></tr></thead>
+                <tbody id="section-roster-body"></tbody>
+              </table>
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <h3>Rooms</h3>
-          <form id="room-form" style="display:grid; grid-template-columns: repeat(auto-fit, minmax(160px,1fr)); gap:10px; margin-bottom:12px;">
-            <input id="room-name" placeholder="Room name (e.g., Room 101)" required />
-            <input id="room-building" placeholder="Building (optional)" />
-            <input id="room-level" placeholder="Level/Floor (optional)" />
-            <button type="submit">Add Room</button>
-          </form>
-          <div class="table-container" style="max-height:200px;">
-            <table>
-              <thead><tr><th>Name</th><th>Building</th><th>Level</th><th></th></tr></thead>
-              <tbody id="room-table-body"></tbody>
-            </table>
+        </details>
+
+        <details class="accordion">
+          <summary>Rooms</summary>
+          <div class="accordion-body">
+            <form id="room-form" style="display:grid; grid-template-columns: repeat(auto-fit, minmax(160px,1fr)); gap:10px; margin-bottom:12px;">
+              <input id="room-name" placeholder="Room name (e.g., Room 101)" required />
+              <input id="room-building" placeholder="Building (optional)" />
+              <input id="room-level" placeholder="Level/Floor (optional)" />
+              <button type="submit">Add Room</button>
+            </form>
+            <div class="table-container" style="max-height:200px;">
+              <table>
+                <thead><tr><th>Name</th><th>Building</th><th>Level</th><th></th></tr></thead>
+                <tbody id="room-table-body"></tbody>
+              </table>
+            </div>
+            <div id="room-status" style="font-size:12px; color: var(--muted); margin-top:6px;"></div>
           </div>
-          <div id="room-status" style="font-size:12px; color: var(--muted); margin-top:6px;"></div>
-        </div>
-        <div class="card">
-          <h3>Section Schedule</h3>
-          <div style="display:flex; flex-wrap:wrap; gap:12px; margin-bottom:12px;">
-            <select id="schedule-section" style="min-width:200px;"></select>
-            <label style="display:flex; align-items:center; gap:6px; font-size:12px; color: var(--muted);">
-              <input id="schedule-allow-sat" type="checkbox" /> Allow Saturday (make-up)
-            </label>
-            <button id="schedule-generate" type="button">Generate Schedule</button>
-            <button id="schedule-print" type="button" class="btn-secondary">Print</button>
-            <button id="schedule-pdf" type="button" class="btn-secondary">Download PDF</button>
+        </details>
+
+        <details class="accordion" open>
+          <summary>Section Schedule</summary>
+          <div class="accordion-body">
+            <div style="display:flex; flex-wrap:wrap; gap:12px; margin-bottom:12px;">
+              <select id="schedule-section" style="min-width:200px;"></select>
+              <label style="display:flex; align-items:center; gap:6px; font-size:12px; color: var(--muted);">
+                <input id="schedule-allow-sat" type="checkbox" /> Allow Saturday (make-up)
+              </label>
+              <button id="schedule-generate" type="button">Generate Schedule</button>
+              <button id="schedule-print" type="button" class="btn-secondary">Print</button>
+              <button id="schedule-pdf" type="button" class="btn-secondary">Download PDF</button>
+            </div>
+            <div class="table-container" style="max-height:260px;">
+              <table id="section-schedule-table">
+                <thead><tr><th>Day</th><th>Time</th><th>Subject</th><th>Teacher</th><th>Room</th></tr></thead>
+                <tbody id="section-schedule-body"></tbody>
+              </table>
+            </div>
+            <div id="schedule-status" style="font-size:12px; color: var(--muted); margin-top:8px;"></div>
           </div>
-          <div class="table-container" style="max-height:260px;">
-            <table id="section-schedule-table">
-              <thead><tr><th>Day</th><th>Time</th><th>Subject</th><th>Teacher</th><th>Room</th></tr></thead>
-              <tbody id="section-schedule-body"></tbody>
-            </table>
-          </div>
-          <div id="schedule-status" style="font-size:12px; color: var(--muted); margin-top:8px;"></div>
-        </div>
+        </details>
       </div>
-      <div class="card">
-        <h3>Sections Directory</h3>
-        <div class="table-container">
-          <table id="sections-table">
-            <thead><tr><th>Name</th><th>Band</th><th>Grade</th><th>Track</th><th>Adviser</th><th>Students</th><th>Action</th></tr></thead>
-            <tbody></tbody>
-          </table>
+
+      <details class="accordion" open>
+        <summary>Sections Directory</summary>
+        <div class="accordion-body">
+          <div class="table-container">
+            <table id="sections-table">
+              <thead><tr><th>Name</th><th>Band</th><th>Grade</th><th>Track</th><th>Adviser</th><th>Students</th><th>Action</th></tr></thead>
+              <tbody></tbody>
+            </table>
+          </div>
         </div>
-      </div>
+      </details>
     </section>
 
     <section class="tab" id="tab-logs">
