--- a/dashboard.html
+++ b/dashboard.html
@@ -313,27 +313,41 @@
     button {
       background: var(--accent);
       color: white;
-      border: none;
-      border-radius: 8px;
+      border: 1px solid var(--accent);
+      border-radius: 10px;
       cursor: pointer;
-      font-weight: 600;
-      padding: 10px 18px;
+      font-weight: 700;
+      padding: 11px 18px;
       font-size: 13px;
-      transition: all 0.15s;
+      transition: all 0.18s ease;
       font-family: inherit;
+      box-shadow: 0 10px 24px rgba(124, 58, 237, 0.24);
     }
-    button:hover { background: var(--accent-hover); }
-    button:active { transform: scale(0.98); }
+    button:hover { background: var(--accent-hover); border-color: var(--accent-hover); box-shadow: 0 12px 28px rgba(124,58,237,0.3); }
+    button:active { transform: translateY(1px); }
+    button:focus-visible { outline: 2px solid var(--muted-strong); outline-offset: 2px; }
+    button:disabled { opacity: 0.6; cursor: not-allowed; box-shadow: none; }
 
     button.btn-secondary {
-      background: rgba(255,255,255,0.05);
-      border: 1px solid var(--border);
-      color: var(--muted);
+      background: var(--card);
+      border: 1px solid var(--border-strong);
+      color: var(--muted-strong);
+      box-shadow: none;
     }
     button.btn-secondary:hover {
-      background: rgba(255,255,255,0.08);
+      background: var(--accent-soft);
       color: white;
+      border-color: var(--accent);
     }
+    button.btn-text {
+      background: transparent;
+      border: none;
+      color: var(--accent);
+      font-weight: 700;
+      box-shadow: none;
+      padding: 8px 10px;
+    }
+    button.btn-text:hover { color: white; text-decoration: underline; }
     
     /* Specific Button Styles */
     .delete-student, .section-delete {
