Allow setting homeroom adviser per student

--- a/dashboard.html
+++ b/dashboard.html
@@ -1218,6 +1218,7 @@
                         <td style="display:flex; gap:8px; flex-wrap:wrap;">
                           <button data-id="${s.id}" class="print-report" style="padding:6px 10px;">Report PDF</button>
                           <button data-id="${s.id}" class="print-schedule" style="padding:6px 10px;">Schedule</button>
+                          <button data-id="${s.id}" class="set-homeroom" style="padding:6px 10px;">Set Homeroom</button>
                           <button data-id="${s.id}" class="delete-student" style="padding:6px 10px;">Delete</button>
                         </td>`;
         tbody.appendChild(tr);
@@ -1237,6 +1238,30 @@
             showToast("Student deleted", "success");
           } catch (ex) {
             showToast(ex.message || "Failed to delete student.", "error");
+          }
+        };
+      });
+      document.querySelectorAll(".set-homeroom").forEach(btn => {
+        btn.onclick = async () => {
+          const teacherNames = teachersCache.map(t => t.full_name || t.username).filter(Boolean);
+          const suggestion = teacherNames.slice(0, 6).join(", ");
+          const input = prompt(`Assign homeroom adviser${suggestion ? ` (e.g., ${suggestion})` : ""}:`, "");
+          if (input === null) return; // cancelled
+          const picked = input.trim();
+          if (!picked) { showToast("Homeroom adviser not set (empty).", "info"); return; }
+          if (teacherNames.length && !teacherNames.includes(picked)) {
+            showToast("Name not found in teachers list. Use exact teacher name.", "error");
+            return;
+          }
+          try {
+            await fetchJSON(`/students/${btn.dataset.id}`, {
+              method: "PUT",
+              body: JSON.stringify({ homeroom_teacher: picked }),
+              successMessage: "Homeroom adviser updated",
+            });
+            await refreshAll();
+          } catch (ex) {
+            showToast(ex.message || "Failed to set homeroom adviser.", "error");
           }
         };
       });
